fix overflow issue

--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 100;
 }
 #ouibounce-popupModal .underlay {
   width: 100%;
